<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="string_app_name">My Azkar</string>
    <string name="string_morning_azkar">Morning Azkar</string>
    <string name="string_evening_azkar">Evening Azkar</string>
    <string name="string_sleeping_azkar">Sleeping Azkar</string>
    <string name="string_waking_azkar">Waking Up Azkar</string>
    <string name="string_praying_azkar">After Prayer Azkar</string>

    <string name="string_notification_morning_azkar">Time for Morning Azkar</string>
    <string name="string_notification_evening_azkar">Time for Evening Azkar</string>
    <string name="string_select_time">Select Time</string>
    <string name="string_settings">Settings</string>

    <string name="string_notifications_allowed">Notifications Enabled</string>
    <string name="string_notifications_denied">Notifications Disabled</string>
    <string name="string_dark_mode">Dark Mode</string>

    <string name="string_clock_morning_azkar">Add Alarm for Morning Azkar</string>
    <string name="string_clock_evening_azkar">Add Alarm for Evening Azkar</string>
    <string name="string_alarm_morning_azkar_enabled">Morning Azkar Alarm Enabled</string>
    <string name="string_alarm_morning_azkar_disabled">Morning Azkar Alarm Disabled</string>
    <string name="string_alarm_evening_azkar_enabled">Evening Azkar Alarm Enabled</string>
    <string name="string_alarm_evening_azkar_disabled">Evening Azkar Alarm Disabled</string>
    <string name="string_channel_morning_azkar">Morning Azkar Notifications</string>
    <string name="string_channel_evening_azkar">Evening Azkar Notifications</string>
    <string name="string_select_alarm">Select Alarm</string>

    <string name="string_widget_azkar_on_home_screen">Azkar Home Screen Widget</string>
    <string name="string_title_add_new_zekir">Add New Zekr</string>
    <string name="string_btn_add_new_zekir">Add</string>
    <string name="string_toast_added">Added Successfully</string>
    <string name="string_btn_cancel">Cancel</string>
    <string name="string_btn_update">Update</string>
    <string name="string_btn_delete">Delete</string>
    <string name="string_nav_tasbeeh_page">Tasbeeh</string>
    <string name="string_nav_widget_page">Azkar Widget Page</string>
    <string name="string_count">0</string>

    <!-- Missing strings -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>