<LinearLayout
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/id_settings"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.Toolbar
                style="@style/ToolBarStyle"
                android:id="@+id/id_settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/string_settings"
                tools:targetApi="34"

        />

    <LinearLayout
            android:id="@+id/id_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            style="@style/Screen"
    >

        <Switch
                android:id="@+id/id_switch_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_dark_mode"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:minHeight="48dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:contextClickable="true"
                android:layout_marginBottom="20dp"
        >
            <Switch
                    android:id="@+id/id_switch_clock_morning_azkar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_clock_morning_azkar"
                    android:textSize="25sp"
                    android:minHeight="48dp"/>
            <TextView
                    android:id="@+id/id_clock_morning_azkar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/string_select_time"
                    android:textSize="20sp"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:contextClickable="true"
                android:layout_marginBottom="20dp"
        >
            <Switch
                    android:id="@+id/id_switch_clock_evening_azkar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_clock_evening_azkar"
                    android:textSize="25sp"
                    android:minHeight="48dp"/>
            <TextView
                    android:id="@+id/id_clock_evening_azkar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/string_select_time"
                    android:textSize="20sp"
            />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>