<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <!--===========Tool Bar===================-->
    <LinearLayout
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:paddingTop="35dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.001"
            android:orientation="horizontal">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_app_name"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:textSize="25sp"
        />
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:src="@drawable/icon_settings"
                android:background="@null"
        />

    </LinearLayout>

    <!--=======================Page===================-->
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/id_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"

    >
        <Button
                android:id="@+id/id_morning_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_morning_azkar"
                android:backgroundTint="@color/cyan"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.288"/>
        <Button
                android:id="@+id/id_evening_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_evening_azkar"
                android:backgroundTint="@color/purple"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.412"/>
        <Button
                android:id="@+id/id_tasbeeh_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_tasbeeh"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.552"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>